--- a/main/zzz-bin/bin/bin/bin/house-of-danger/inside/box/index.html
+++ b/main/zzz-bin/bin/bin/bin/house-of-danger/inside/box/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../setup/img/favicon.png">
+    <link rel="icon" href="../../../../../../../../setup/img/favicon.png">
 
     <title>Index</title>
 
-    <script src="../../../../setup/js/qrcode.js"></script> 
+    <script src="../../../../../../../../setup/js/qrcode.js"></script> 
 
-    <link href="../../../../setup/css/bootstrap.css" rel="stylesheet">
+    <link href="../../../../../../../../setup/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../../../setup/css/album.css" rel="stylesheet">
+    <link href="../../../../../../../../setup/css/album.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,10 +37,10 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex ">
           <a class="navbar-brand d-flex align-items-center">
-            <img src="../../../../setup/img/favicon.png" width="20" height="20">
+            <img src="../../../../../../../../setup/img/favicon.png" width="20" height="20">
             <strong>&nbsp;Index</strong>
             &nbsp;&nbsp;&nbsp;
-            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/index.html</span>
+            <span style='font-family: "Courier New"'>zzz-bin/bin/bin/bin/house-of-danger/inside/box/index.html</span>
         </a>
 
         <a style=" text-decoration: underline; color: white; font-size: 250%;" href="../index.html">⬆️</a>        </div>
@@ -53,7 +53,7 @@
 
       <section class="text-center">
         <div class="container">
-          <h3><b>bin</b></h3>
+          <h3><b>box</b></h3>
         </div>
       </section>
 
@@ -65,11 +65,16 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="Screen Shot 2020-12-26 at 6.58.31 PM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-26 at 6.58.31 PM.png.resized.jpg"></a>
+                  <a  href="Screen Shot 2020-12-29 at 11.33.08 AM.png.resized.jpg"><img class="card-img-top image-file" src="Screen Shot 2020-12-29 at 11.33.08 AM.png.resized.jpg"></a>
                               <div class="card-body greydiv">
                       
                       <div style='text-align: left;'><div style='text-align: left;'>#hashtags</div><span id='foohash'></div><br><br>
-                      
+                      <div style='text-align: left;'>AMON LenU a!<br />
+<br />
+MAGIC CARDS<br />
+<br />
+ <br />
+</div>
                     </div>
                 </div>
               </div>
@@ -83,10 +88,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="bin/index.html"><img class="card-img-top image-folder" src="bin/Screen Shot 2020-12-29 at 10.44.47 AM.png.resized.jpg"></a>
+                  <a  href="cards/index.html"><img class="card-img-top image-file" src="cards/Screen Shot 2020-12-29 at 11.33.35 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="bin/index.html">bin</a>
+                      <a href="cards/index.html">cards</a>
 
                     </p>
                   </div>
@@ -99,10 +104,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="first-loser-wins/index.html"><img class="card-img-top image-folder" src="first-loser-wins/Screen Shot 2020-12-27 at 12.37.16 PM.png.resized.jpg"></a>
+                  <a  href="lord-nikon/index.html"><img class="card-img-top image-file" src="lord-nikon/Screen Shot 2020-12-29 at 11.34.17 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="first-loser-wins/index.html">first-loser-wins</a>
+                      <a href="lord-nikon/index.html">lord-nikon</a>
 
                     </p>
                   </div>
@@ -115,10 +120,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="prose/index.html"><img class="card-img-top image-folder" src="prose/Screen Shot 2020-12-27 at 3.12.36 PM.png.resized.jpg"></a>
+                  <a  href="matches/index.html"><img class="card-img-top image-file" src="matches/Screen Shot 2020-12-29 at 11.33.54 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="prose/index.html">prose</a>
+                      <a href="matches/index.html">matches</a>
 
                     </p>
                   </div>
@@ -131,42 +136,10 @@
               </div>
               <div class="col-md-6">
                 <div class="card mb-4 box-shadow">
-                  <a  href="router/index.html"><img class="card-img-top image-folder" src="router/Screen Shot 2020-12-27 at 5.35.14 PM.png.resized.jpg"></a>
+                  <a  href="paper/index.html"><img class="card-img-top image-folder" src="paper/Screen Shot 2020-12-29 at 11.34.33 AM.png.resized.jpg"></a>
                   <div class="card-body">
                     <p class="card-text">
-                      <a href="router/index.html">router</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="spin/index.html"><img class="card-img-top image-folder" src="spin/Screen Shot 2020-12-27 at 6.03.20 PM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="spin/index.html">spin</a>
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>              <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-6">
-                <div class="card mb-4 box-shadow">
-                  <a  href="vans/index.html"><img class="card-img-top image-folder" src="vans/Screen Shot 2020-12-28 at 11.08.30 AM.png.resized.jpg"></a>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <a href="vans/index.html">vans</a>
+                      <a href="paper/index.html">paper</a>
 
                     </p>
                   </div>
